addings: user-details | user-repositories

--- a/src/app/pages/profile-page/components/navbar/navbar.component.html
+++ b/src/app/pages/profile-page/components/navbar/navbar.component.html
@@ -3,10 +3,5 @@
         <span>Search</span>
         <span class="ms-3">d_evs</span>
     </a>
-    <form class="form-inline">
-       <div class="d-inline-flex input-group">
-        <span class="input-group-text"><img src="../../../assets/icons/Vector.svg"></span>
-        <input type="search" class="form-control me-5" aria-label="Search" placeholder="Search" [formControl]="searchInput">
-       </div>
-    </form>
+    <app-search-bar class="me-5"></app-search-bar>
 </nav>
