--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,2 +1,2 @@
 <app-navbar></app-navbar>
-<app-user-profile></app-user-profile>
+<app-user-profile [userDetails]="userDetails" [userRepositories]="userRepositories"></app-user-profile>
