--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,6 +1,6 @@
 <div class="d-inline-flex">
     <div class="input-group mb-2">
-        <img class="input-group-text" src="../../../assets/icons/Vector.svg">
+        <img class="input-group-text" src="../../../assets/icons/search.svg">
         <input type="text" class="form-control" placeholder="Search" [formControl]="searchInput">
     </div>
     <button class="btn btn-primary ms-3" (click)="onSearch()">Search</button>
