--- a/src/app/pages/profile-page/components/user-profile/user-details/user-details.component.html
+++ b/src/app/pages/profile-page/components/user-profile/user-details/user-details.component.html
@@ -1,1 +1,57 @@
-<p>user-details works!</p>
+<div class=" p-4 user-detail-container">
+    <div class="d-inline-flex mb-2">
+        <img [src]="userDetails.avatar_url" class="rounded-circle img-size img-fluid">
+        <div class="d-flex flex-column ms-5">
+            <label for="name" class="text-config"> {{userDetails.name}} </label>
+            <label for="username" class="opacity-50"> @{{userDetails.username}} </label>
+        </div>
+    </div>
+    <span class="opacity-75">{{userDetails.bio}}</span>
+
+    <div class="d-flex mt-4">
+        <img [src]="dataList[0].url" class="icon-size">
+        <label for="data" class="opacity-50 ms-2"> {{userDetails.followers}} seguidores </label>
+    </div>
+
+    <div class="d-flex mt-2 mb-4">
+        <img [src]="dataList[1].url" class="icon-size">
+        <label for="data" class="opacity-50 ms-2"> {{userDetails.following}} seguindo </label>
+    </div>
+
+    <div [ngStyle]="{'display': userDetails.company ? 'block' : 'none'}">
+        <div class="d-flex mt-2">
+            <img [src]="dataList[2].url" class="icon-size">
+            <label for="data" class="opacity-50 ms-2"> {{userDetails.company}} </label>
+        </div>
+    </div>
+    
+    <div [ngStyle]="{'display': userDetails.location ? 'block' : 'none'}">
+        <div class="d-flex mt-2">
+            <img [src]="dataList[3].url" class="icon-size">
+            <label for="data" class="opacity-50 ms-2"> {{userDetails.location}} </label>
+        </div>
+    </div>
+
+    <div [ngStyle]="{'display': userDetails.email ? 'block' : 'none'}">
+        <div class="d-flex mt-2">
+            <img [src]="dataList[4].url" class="icon-size">
+            <label for="data" class="opacity-50 ms-2"> {{userDetails.email}} </label>
+        </div>
+    </div>
+
+
+    <div [ngStyle]="{'display': userDetails.organizations_url ? 'block' : 'none'}">
+        <div class="d-flex mt-2">
+            <img [src]="dataList[5].url" class="icon-size">
+            <label for="data" class="opacity-50 ms-2 break-word"> {{userDetails.organizations_url}} </label>
+        </div>
+    </div>
+
+    <div [ngStyle]="{'display': userDetails.twitter_username ? 'block' : 'none'}">
+        <div class="d-flex mt-2">
+            <img [src]="dataList[6].url" class="icon-size">
+            <label for="data" class="opacity-50 ms-2"> {{userDetails.twitter_username}} </label>
+        </div>
+    </div>
+
+</div>
