--- a/src/app/pages/profile-page/components/user-profile/user-profile.component.scss
+++ b/src/app/pages/profile-page/components/user-profile/user-profile.component.scss
@@ -1,7 +1,8 @@
 
  .user-profile-container{
-   width: 100vw;
-   height: 100%;
-   background-color: #F8F9FA;
+  height: 100vh;
    
  }
+.col-1 {
+  max-width: 20px;
+}
