--- a/src/app/pages/profile-page/components/user-profile/user-repositories/user-repositories.component.html
+++ b/src/app/pages/profile-page/components/user-profile/user-repositories/user-repositories.component.html
@@ -1,1 +1,8 @@
-<p>user-repositories works!</p>
+
+<div class="user-repositories-container p-4">
+    <div  *ngFor="let repository of userRepositories">
+        <h3> {{repository.name}}</h3>
+        <p> {{repository.description}}</p>
+    </div>
+
+</div>
