adjustment: layout | addings: repository status group

--- a/src/app/components/search-bar/search-bar.component.scss
+++ b/src/app/components/search-bar/search-bar.component.scss
@@ -6,9 +6,11 @@
 .btn-primary {
     background-color: #8C19D2;
     border-color: #8C19D2;
-    height: 38px;
+    height: 48px;
 }
 
 .form-control {
+    height: 48px;
     width: 80%;
+    border-left: 0;
 }
