--- a/src/app/pages/profile-page/components/navbar/navbar.component.html
+++ b/src/app/pages/profile-page/components/navbar/navbar.component.html
@@ -1,7 +1,15 @@
-<nav class="navbar navbar-light bg-light justify-content-between">
-    <a class="navbar-brand ms-5">
-        <span>Search</span>
-        <span class="ms-3">d_evs</span>
-    </a>
-    <app-search-bar class="me-5"></app-search-bar>
+<nav class="navbar navbar-light bg-light ">
+    <div class="row">
+        <div class="col-6 mt-1">
+            <a class="navbar-brand ms-5">
+                <span>Search</span>
+                <span class="ms-3">d_evs</span>
+            </a>
+        </div>
+        <div class="col-6 mt-2">
+            <app-search-bar class="me-5"></app-search-bar>
+        </div>
+    </div>
+
+
 </nav>
