--- a/src/app/pages/profile-page/components/user-profile/user-details/user-details.component.scss
+++ b/src/app/pages/profile-page/components/user-profile/user-details/user-details.component.scss
@@ -18,6 +18,13 @@
 }
 
 .user-detail-container {
-    background-color: #f5f5f5;
-    height: 100%;
+    margin-top: 80px;
+    background-color: white;
+    height: auto;
+}
+
+.btn-primary {
+    background-color: #8C19D2;
+    border-color: #8C19D2;
+    height: 48px;
 }
