--- a/src/app/pages/profile-page/components/user-profile/user-repositories/user-repositories.component.scss
+++ b/src/app/pages/profile-page/components/user-profile/user-repositories/user-repositories.component.scss
@@ -1,5 +1,6 @@
 .user-repositories-container {
-    background-color: #f5f5f5;
+    margin-top: 80px;
+    background-color: white;
     height: fit-content;
     width: 100%;
 }
