fixture: annoying horizontal scroll

--- a/src/app/pages/profile-page/components/user-profile/user-profile.component.html
+++ b/src/app/pages/profile-page/components/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-md-center background-color-config">
+<div class="row justify-content-md-center background-config">
     <div class="col-3">
         <app-user-details [userDetails]="userDetails"></app-user-details>
     </div>
