--- a/src/app/pages/profile-page/components/user-profile/user-repositories/user-repositories.component.html
+++ b/src/app/pages/profile-page/components/user-profile/user-repositories/user-repositories.component.html
@@ -7,7 +7,7 @@
             <img src="../../../../../../assets/icons/star.svg" class="me-2">
             <span class="me-2">{{repository.watchers}}</span>
             <img src="../../../../../../assets/icons/bulletpoint.svg" class="me-2">
-            <span>{{getLastUpdate(repository)}}</span>
+            <span> Atualizado há {{getLastUpdate(repository)}}  </span>
         </div>
         <hr>
     </div>
